# Student_Grade_Database

./: .travis.yml  CMakeLists.txt  README.md
StudentGradeDatabase/: Student_Grade_Database.sln
StudentGradeDatabase/Debug/: Student_Grade_Database.ilk
StudentGradeDatabase/Student_Grade_Database/: Student_Grade_Database.c  Student_Grade_Database.h  Student_Grade_Database.vcxproj  Student_Grade_Database.vcxproj.filters  student.db  student.txt
StudentGradeDatabase/Student_Grade_Database/Debug/: vc120.idb
StudentGradeDatabase/Student_Grade_Database/Debug/Student_.1BA4226A.tlog/: CL.read.1.tlog  CL.write.1.tlog  Student_Grade_Database.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
StudentGradeDatabase/Student_Grade_Database/x64/Debug/: vc120.idb
StudentGradeDatabase/Student_Grade_Database/x64/Debug/Student_.1BA4226A.tlog/: CL.read.1.tlog  CL.write.1.tlog  Student_Grade_Database.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
StudentGradeDatabase/x64/Debug/: Student_Grade_Database.ilk
